# packages/trueforge-sdk/src/api/types/index.ts
@@ -137,6 +137,7 @@ export * from "./ModelProviderAuth.js";
 export * from "./ModelProviderManifest.js";
 export * from "./MoonshotModelProvider.js";
 export * from "./OpenAiModelProvider.js";
+export * from "./OpenRouterModelProvider.js";
 export * from "./PermissionResourceType.js";
 export * from "./PreviousTurnIdInput.js";
 export * from "./RawToolCall.js";
