# python/trueforge_sdk/src/trueforge_sdk/types/open_router_model_provider.py
@@ -1,0 +1,32 @@
+# This file was auto-generated by Fern from our API Definition.
+
+import typing
+
+import pydantic
+from ..core.pydantic_utilities import IS_PYDANTIC_V2
+from ..core.unchecked_base_model import UncheckedBaseModel
+from .configured_model import ConfiguredModel
+from .model_provider_auth import ModelProviderAuth
+
+
+class OpenRouterModelProvider(UncheckedBaseModel):
+    auth: ModelProviderAuth
+    base_url: typing.Optional[str] = pydantic.Field(default="https://openrouter.ai/api/v1")
+    """
+    Override of the provider's default API base URL.
+    """
+
+    models: typing.List[ConfiguredModel] = pydantic.Field()
+    """
+    Models exposed by this provider (at least one).
+    """
+
+    type: typing.Literal["openrouter"] = "openrouter"
+
+    if IS_PYDANTIC_V2:
+        model_config: typing.ClassVar[pydantic.ConfigDict] = pydantic.ConfigDict(extra="allow")  # type: ignore # Pydantic v2
+    else:
+
+        class Config:
+            smart_union = True
+            extra = pydantic.Extra.allow
